fixing more spacing

--- a/style.css
+++ b/style.css
@@ -71,8 +71,6 @@
 }
 #contact {
     margin-top: 4rem;
-    padding-top: 2rem;
-}
-#contact {
+    padding-top: 4rem;
     padding-bottom: 4rem;
 }
